# Cascade

./: README.md  demo.py  requirements.txt  run_real.py
app/: streamlit_app.py
cascade/: __init__.py  reactors.py  supply.py  tails.py
cascade/cascade/: .gitignore  pyproject.toml
cascade/cascade/cascade/: connectors.py  demand.py  enrichment.py  gap.py
cascade/cascade/cascade/data/: nrc_snapshot.json
cascade/cascade/tests/: test_cascade.py
cascade/data/: eia_snapshot.json  wikidata_snapshot.json
tests/: test_connectors.py  test_tails.py
